# DataLaunchpad

./: README.md  dataInvestigation.ipynb  pyproject.toml
.ipynb_checkpoints/: dataInvestigation-checkpoint.ipynb
nyc_taxis/: dbt_project.yml
