[tool.poetry]
name = "datalaunchpad-project"
version = "0.1.0"
description = ""
authors = ["RachelSwift"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
jupyter = "^1.0.0"
fastparquet = "^2022.12.0"
dbt-snowflake = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
